sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:2: error: not found: value getPositionTrou
  var (x,y) = (getTrouBase(),getPositionTrou())
                             ^NaiveBaseball:8: error: overloaded method value - with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Any)
      var d = getCouleurJoueur(i,j)-x
                                   ^NaiveBaseball:13: error: type mismatch;
 found   : Any
 required: Int
  deplace(m,p)
          ^NaiveBaseball:13: error: type mismatch;
 found   : Any
 required: Int
  deplace(m,p)
            ^